<resources>
    <string name="app_name">My Application!</string>
    <string name="home"> Главная </string>
    <string name="store"> Рынок </string>
    <string name="earnings"> Доходы </string>
    <string name="builds"> Билды </string>
    <string name="title"> Albion Staff </string>
    <string name="First_Vopros"> Что такое Albion? </string>
    <string name="Opisanie"> Albion Online - это MMORPG-песочница в открытом средневековом фэнтези мире. </string>
    <string name="Second_Vopros"> Что такое Albion Staff? </string>
    <string name="Opisanie2"> Так как в игре присутствует экономика, управляемая игроками, где почти каждый
        предмет кем-то создан. Появляется необходимость в её понимании. Наше приложение поможет вам следить
        за ценами на рынке в режиме реального времени, расскажет какие виды заработка есть в игре и как ими
        пользоваться, а также покажет вам статистику убийств разными классами, чтобы вы могли понимать какая
        мета сейчас в игре. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_media">Image</string>
    <string name="Transported">Перевозка</string>
    <string name="Transportation_vlojenia">Вложения: Мал-Бол</string>
    <string name="Transportation_earn">Прибыль: 10-20%</string>
    <string name="cloth_armor">Тканевая броня</string>
    <string name="cloth_helmet">Тканевый шлем</string>
    <string name="cloth_shoes">Тканевые ботинки</string>
    <string name="leather_armor">Кожанная броня</string>
    <string name="leather_helmet">Кожанный шлем</string>
    <string name="leather_shoes">Кажанные ботинки</string>
    <string name="plate_armor">Тяжёлая броня</string>
    <string name="plate_helmet">Тяжёлый шлем</string>
    <string name="plate_shoes">Тяжёлые ботинки</string>
    <string name="opisanie_transportation">Самая обычная перевозка ресурсов из одного города в другой, с целью получения прибыли. Здесь вы сможете посмотреть разницу в цене на ресурсы в разных городах.</string>
    <string-array name="Resources">
        <item>Ткань</item>
        <item>Хлопок</item>
        <item>Шкура</item>
        <item>Кожа</item>
        <item>Металический слиток</item>
        <item>Металл</item>
        <item>Дерево</item>
        <item>Обработанное дерево</item>
        <item>Камень</item>
        <item>Каменный блок</item>
    </string-array>
    <string-array name="Tier">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="Cities">
        <item>Люмхурст</item>
        <item>Форт Стерлинг</item>
        <item>Тетфорд</item>
        <item>Мартлок</item>
        <item>Бриджвотч</item>
        <item>Карлеон</item>
    </string-array>
    <string-array name="PereCraftResources">
        <item>Ткань</item>
        <item>Кожа</item>
        <item>Металический слиток</item>
        <item>Обработанное дерево</item>
        <item>Каменный блок</item>
    </string-array>
</resources>